Updated help menu items and added quick start guide

--- a/help/markdown/ask_question.mkd
+++ b/help/markdown/ask_question.mkd
@@ -2,4 +2,4 @@
 
 ---
 
-To have a question answered, please email it to: questions@econvenor.org
+If you have a question, please email it to: mail@econvenor.org
