--- a/help/markdown/user_guide.mkd
+++ b/help/markdown/user_guide.mkd
@@ -2,12 +2,4 @@
 
 ---
 
-### 1. Dashboard
-
-The Dashboard is where you land once you log in to eConvenor.
-
----
-
-### 2. Tasks
-
-text continues here...
+Comming soon.
