Altered wording on 'Ask a question' page

--- a/help/markdown/ask_question.mkd
+++ b/help/markdown/ask_question.mkd
@@ -2,4 +2,6 @@
 
 ---
 
-If you have a question, please email it to: mail@econvenor.org
+If you have a question, please take a look at the FAQs to see if it's been answered there.
+
+If it hasn't, please email it to: mail@econvenor.org
