Renamed FAQs to Q&A, and removed content which is now on the landing site

--- a/help/markdown/ask_question.mkd
+++ b/help/markdown/ask_question.mkd
@@ -2,6 +2,6 @@
 
 ---
 
-If you have a question, please take a look at the FAQs to see if it's been answered there.
+If you have a question, please take a look at the Q&A to see if it's been answered there.
 
 If it hasn't, please email it to: mail@econvenor.org
